--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Welcome to my webpage!</h1>
+        <h2> This is the second new heading added </h2>
         Hello, world!
     </body>
 </html>
